--- a/package.json
+++ b/package.json
@@ -28,7 +28,6 @@
     "nodemon": "^3.0.1"
   },
   "devDependencies": {
-    "gh-pages": "^6.1.0",
-    "react-scripts": "^5.0.1"
+    "gh-pages": "^6.1.0"
   }
 }
